--- a/greatFeature.html
+++ b/greatFeature.html
@@ -3,5 +3,14 @@
 <title> Это начало нового супер сайта</title>
 </head>
 <body>
+
+<div>
+   Прайс супер сайта
+</div>
+
+<div>
+   Контакты супер сайта
+</div>
+
 </body>
 </html>
